# ros2_shm_network_bridge

./: .gitignore  HOW_IT_WAS_BUILT.md  PROMPT.md  README.md  USING_AS_LIBRARY.md  install_lib.sh
docs/: 01_architecture.md  02_cpp_api.md  03_build_and_install.md  04_network_transport.md  05_python_and_cpp_interop.md  06_modular_core.md  readme_to_pdf.py
examples/cpp/: read_cpp.cpp  ros2_to_shm.cpp  shm_to_network.cpp  shm_to_ros2.cpp  shm_to_udp.cpp  write_cpp.cpp
examples/end_to_end/: README.md
examples/python/: network_to_shm.py  read_py.py  udp_client.py  write_py.py
src/message_type/: GENERAL_TOPIC.txt  HEAVY_FLAT.txt  LIGHT_CDR.txt  SERVICE_ONLY.txt  generate_index.py  index.json
src/shm_bridge_cpp/: CMakeLists.txt  package.xml
src/shm_bridge_cpp/benchmark/: BENCHMARKING.md  INTRA_VS_INTER_PROCESS.md  bench_common.hpp  bridge_bench.cpp  cyclonedds_bench.cpp  dds_bench_impl.hpp  fastdds_bench.cpp  shm_perf_test.cpp
src/shm_bridge_cpp/benchmark/test4_benchmarks/: bench4_report.hpp  bench_cpu4.hpp  bridge_bench4.cpp  cyclonedds_bench4.cpp  dds_bench4_impl.hpp  fastdds_bench4.cpp  shm_msgs_bench4.cpp
src/shm_bridge_cpp/examples/: example_usage.cpp
src/shm_bridge_cpp/include/shm_bridge_cpp/: flat_adapter.hpp  shm_bridge.hpp  shm_contract.hpp  shm_futex.hpp
src/shm_bridge_cpp/src/: generic_shm_reader.cpp  generic_shm_writer.cpp  ros2_to_shm.cpp  ros2_to_shm_flat.cpp  ros_rgb_depth_to_shm.cpp  shm_bridge.cpp  shm_rgb_depth_viewer.cpp
src/shm_bridge_python/: package.xml  setup.cfg  setup.py
src/shm_bridge_python/shm_bridge_python/: __init__.py  adapter.py  example_usage.py  generic_shm_reader.py  generic_shm_writer.py  ros2_to_shm.py  ros2_to_shm_all.py  ros2_udp_streamer.py  ros_rgb_to_shm.py  shm_contract.py  shm_rgb_viewer.py
test_runs/: README.md  make_graphs.py
test_runs/data/: env.txt  sweep.csv
