<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shm_bridge_cpp</name>
  <version>0.0.0</version>
  <description>C++ nodes and reusable library for a generic type-agnostic ROS 2 to shared-memory bridge.</description>
  <maintainer email="47215482+rajpcrj@users.noreply.github.com">raj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>map_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rmw_dds_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
